@startuml
'https://plantuml.com/class-diagram
'___________STYLES___________
title UML - Pizzería
skinparam classAttributeIconSize 0
skinparam backgroundColor White
skinparam RoundCorner 10
skinparam Shadowing true

skinparam class {
    ArrowColor Black
    BackgroundColor White
    HeaderBackgroundColor Gray
    BorderColor Black
    FontColor White
    FontSize 14
    AttributeFontSize 12
}

skinparam object{
    ArrowColor Black
    BackgroundColor White
    BorderColor Black
    FontColor Black
    FontSize 14
    AttributeFontSize 12
}

skinparam note {
    BackgroundColor LightYellow
    BorderColor Black
}

'___________UML___________

abstract Cocinero{
+hacerpizza()
-prepararMasa()
-preCocinarMasa()
#{abstract} prepararIngredientes()
#{abstract} agregarIngredientes()
-cocinarPizza()
-empaquetarPizza()
}

class CocineroVeggie{
+prepararIngredientes()
+agregarIngredientes()
}

class CocineroNoVeggie{
+prepararIngredientes()
+agregarIngredientes()
}

Cocinero <|-- CocineroNoVeggie
Cocinero <|-- CocineroVeggie

@enduml